// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 hzcCxX"
    >
      <p
        class="Text-sc-1wu7vpu-0 hdrQgs"
        color="currentColor"
        disabled=""
        font-size="medium"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-xda4ls-0 caqRcm"
    >
      <p
        class="Text-sc-1wu7vpu-0 kUDEbP"
        color="white"
        disabled=""
        font-size="medium"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-xda4ls-0 mccpx"
    >
      <p
        class="Text-sc-1wu7vpu-0 kUDEbP"
        color="white"
        disabled=""
        font-size="medium"
      >
        Disabled text
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Set to inline 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <span
      class="Text-sc-1wu7vpu-0 ipzFTA"
      color="currentColor"
      font-size="medium"
    >
      Inline text
    </span>
    <span
      class="Text-sc-1wu7vpu-0 RbfMK"
      color="currentColor"
      font-size="medium"
    >
      Inline text
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="Text-sc-1wu7vpu-0 RbfMK"
      color="currentColor"
      font-size="medium"
    >
      Default text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a color 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="Text-sc-1wu7vpu-0 dXhWql"
      color="blue"
      font-size="medium"
    >
      Blue text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <p
      class="Text-sc-1wu7vpu-0 kLhDpw"
      color="currentColor"
      font-size="medium"
    >
      Text 24px bottom margin.
    </p>
    <p
      class="Text-sc-1wu7vpu-0 RbfMK"
      color="currentColor"
      font-size="medium"
    >
      Text with default (0px) bottom margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 cvbdIx"
    >
      <p
        class="Text-sc-1wu7vpu-0 RbfMK"
        color="currentColor"
        font-size="medium"
      >
        Default (16px/24px)
      </p>
    </div>
    <div
      class="Box-xda4ls-0 cvbdIx"
    >
      <p
        class="Text-sc-1wu7vpu-0 hsSevS"
        color="currentColor"
        font-size="small"
      >
        Small (14px/24px)
      </p>
      <p
        class="Text-sc-1wu7vpu-0 gQDLhx"
        color="currentColor"
        font-size="small"
      >
        Small Compressed (14px/16px)
      </p>
    </div>
    <div
      class="Box-xda4ls-0 cvbdIx"
    >
      <p
        class="Text-sc-1wu7vpu-0 kLNwfz"
        color="currentColor"
        font-size="smaller"
      >
        Smaller (12px/16px)
      </p>
    </div>
  </div>
</div>
`;
